* What's new in version 4.4

- The locks required to protect concurrent access to global variables
  has been optimized with a "pushdown" algorithm, so that they span
  the smallest possible critical region.  Formerly, and with
  --compatible=4.3, locks always spanned the entire probe handler.
  Lock pushdown means much greater potential concurrency between
  probes running on different CPUs.

* What's new in version 4.3, 2020-06-11

- tapset functions for reading CPU registers and primitives involved with the
  process memory maps work in 'probe process.begin'.

- probe aliases starting with nfs.proc support IPv6 as server_ip and client_ip.
  Also, ip are represented with string valued now.

- The target of process probes may be specified by hexadecimal buildid
  as an alternative to path names.  This makes it possible to probe a
  variety of versions or aliases of a program, even if they are
  running inside containers under a different path name.  Works best
  with a debuginfod server that publishes the executables / debuginfo.
  The following probes glibc.so 2.32-2.fc32.x86_64 from fedora running
  anywhere on your machine.
  
  # export DEBUGINFOD_URLS=https://debuginfod.elfutils.org/
  # stap -e 'probe process("7ca24d4dc3de9d62d9ad6bb25e5b70a3e57a342f")
                   .function("*system") { log("hi") }'

- Functions can now be context-sensitive, meaning that they may make
  references to $context variables and similar constructs that could
  formerly appear only inside probe handlers.  This is implemented by
  cloning the such functions for each probe.
  Only some probe point (dwarf-based user & kernel) types supported.
  function foo () { println ($$vars) }
  probe kernel.function("do_exit") { foo() }
  probe process("/bin/ls").function("main") { foo() }
  probe process("/lib*/libc.so.6").mark("*") { foo() }

- Add new tapset function dump_stack() which prints the current
  kernel backtrace to the kernel trace buffer (as a thin wrapper