@@ -1,3 +1,3 @@
-@define errno() %(
+@define errno %(
     @var("errno","/lib64/libc.so.6")
 %)
