@@ -1,5 +1,7 @@
 * What's new in version 4.4
 
+- Implicit thread local storage variables can now be accessed on x86_64, ppc, and s390.
+
 - The locks required to protect concurrent access to global variables
   has been optimized with a "pushdown" algorithm, so that they span
   the smallest possible critical region.  Formerly, and with
